# game

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  main.hpp  render_context.cpp  render_context.hpp  render_group.cpp  render_group.hpp  render_info.cpp  render_info.hpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  types.hpp
src/common/: common.hpp  types.hpp  util.hpp
src/shaders/: primitive.fs.glsl  primitive.vs.glsl  sprite.fs.glsl  sprite.vs.glsl  text.fs.glsl  text.vs.glsl
